# data-agent

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  data_handler.py  llm_handler.py  main.py  original_task.md  pyproject.toml  query_executor.py
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: alerts.py  data.py  query.py
backend/app/core/: alerts_handler.py  config.py  data_handler.py  llm_handler.py  query_executor.py
backend/app/models/: requests.py  responses.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AlertsPanel.tsx  Chart.tsx  DashboardCharts.tsx  DataSummary.tsx  ExampleQuestions.tsx  QueryInput.tsx  ResultsDisplay.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
